fix overflow and slider "before" label

--- a/src/modules/game/game-desktop/stages/stage-fifth/views/index.scss
+++ b/src/modules/game/game-desktop/stages/stage-fifth/views/index.scss
@@ -88,8 +88,11 @@
       content: '✓';
       rotate: -45deg;
       top: -130px;
-      left: 30px;
-      right:50px;
+      left: 0;
+      right: 0;
+      padding-right: 25px;
+      margin-left: auto;
+      margin-right: auto;
       background: transparent;
       position: absolute;
       color: green;
